# Gtk4-WritePadWidget

./: .clang-format  .git-blame-ignore-revs  .gitignore  .gitmodules  CMakeLists.txt  main.c
demo/: CMakeLists.txt  main.c
widget/: CMakeLists.txt  WPDictionaries.h  WPDictionaries.h.in  WritePadLanguage.c  WritePadLanguage.h  WritePadWidget.c  WritePadWidget.h  WritePadWidget.impl.c  WritePadWidget.impl.h
